# cudo_wiki

./: .env.example  .gitignore  DESIGN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py
app/common/: __init__.py  config.py  db.py  logging.py
app/ingest/: __init__.py  authority_parser.py  bizbox_client.py  board_seed.py  clause_parser.py  crawler.py  db.py  diag.py  gainge_client.py  gainge_crawler.py  health.py  loader.py  models.py  normalize.py  run.py
app/ingest/extract/: __init__.py  excel.py  hwp.py  ocr.py  pdf.py
app/mcp/: __init__.py  acl.py  attachments.py  audit.py  citations.py  context.py  diff.py  redact_ext.py  schemas.py  server.py  sources.py
app/mcp/tools/: __init__.py  _guard.py  aggregate.py  attachment.py  authority.py  board.py  diff_tool.py  recent.py  regulation.py  search.py  videos.py
app/search/: __init__.py  abstain.py  aggregate.py  amount.py  cite.py  eval.py  glm_client.py  intent.py  normalize.py  query_builder.py  redaction.py  rerank.py  router.py  search.py  types.py
deploy/: .env.example  RENDER_CONVENTIONS.md  SMOKE.md  docker-compose.cudo-wiki.yaml  librechat.mcpServers.yaml  nginx.bizbox-dl.conf  smoke.sh
docker/: Dockerfile.mcp
docker/postgres/initdb/: 00-pgroonga.sql
docs/design/: erd.json
migrations/: env.py
migrations/versions/: 0001_extensions.py  0002_core_tables.py  0003_indexes.py  0004_acl_audit.py  0005_video_enum.py
tests/: conftest.py
tests/fixtures/bizbox/1401000286/: board_p1.html  post_1001.html  post_1002.html
tests/fixtures/bizbox/900000286/: authority.xlsx  board_p1.html  inner_1001.html  inner_1002.html  post_1001.html  post_1002.html
tests/integration/: _seed.py  conftest.py  test_abstain_integration.py  test_acl_allowed.py  test_acl_audit_schema.py  test_aggregate_authority.py  test_audit_writes.py  test_board_seed.py  test_compose_config.py  test_crawl_one_board.py  test_enum_check_regression.py  test_eval_harness.py  test_glm_rerank_live.py  test_health_watchdog.py  test_loader_idempotent.py  test_mcp_smoke.py  test_regulation_idempotent_committed.py  test_regulation_idempotent_no_regcode.py  test_schema.py  test_search_clause_exact.py  test_search_synonym.py  test_tools.py  test_tools_negative.py  test_upsert_partial_unique.py
tests/unit/: test_abstain.py  test_acl_filter.py  test_amount_parse.py  test_attachments_io.py  test_audit_hash.py  test_authority_parser.py  test_clause_parser.py  test_compose_structure.py  test_config.py  test_context.py  test_crawler_list.py  test_diff.py  test_extract_dispatch.py  test_extract_excel.py  test_gainge_crawler.py  test_glm_client_payload.py  test_intent.py  test_normalize.py  test_ocr_client.py  test_query_builder.py  test_redact_ext.py  test_redaction.py  test_rerank_fallback.py  test_sources.py  test_two_hop.py  test_verify_citations.py
